@@ -48,6 +48,7 @@
     <Compile Include="BehaviourFactory\ExpressionFactory.cs" />
     <Compile Include="BehaviourFactory\SpawnKerbalFactory.cs" />
     <Compile Include="ContractBehaviour\Expression.cs" />
+    <Compile Include="ContractRequirement\ExpressionRequirement.cs" />
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="ContractBehaviour\SpawnKerbal.cs" />
     <Compile Include="PersistentDataStore.cs" />
