@@ -62,3 +62,49 @@ CONTRACT_TYPE
         }
     }
 }
+
+CONTRACT_TYPE
+{
+    // Unique name of the contract (required)
+    name = ExpressionRequirement
+
+    // Contract text
+    title = EXP - Requirement
+    description = A more detailed description of the contract.  This is where you come in.
+    synopsis = We want you to do a thing.
+    completedMessage = You have done the thing.
+
+    // Target Celestial body - controls where the contract must be completed, has some automated
+    // effects on numeric parameters (increasing science, etc.)
+    targetBody = Kerbin
+
+    // Contract rewards
+    rewardScience = 100.0
+
+    PARAMETER
+    {
+        name = ReachAltitudeEnvelope
+        type = ReachAltitudeEnvelope
+
+        minAltitude = 500
+        maxAltitude = 5000
+
+        // Text to use for the parameter
+        // Default = <kerbal>: Recovered
+        //title = 
+    }
+
+    PARAMETER
+    {
+        name = KerbalDeaths1 
+        type = KerbalDeaths
+    }
+
+    REQUIREMENT
+    {
+        name = Expression1
+        type = Expression
+
+        expression = CC_EXPTEST_Success == 1 || !CC_TestVal
+    }
+}
